# SystemApplicationSoftware-09.03.04-ITMO

./: .gitignore  README.md
1st stage/базы данных/: README.md
1st stage/безопасность жизнедеятельности/: ECO Батманов Даниил P3107.docx  README.md  Здоровое питание, БатмДЕ Р3107.docx  Здоровый сон, Батманов Даниил, P3107.docx  Пожар, Батманов Даниил, P3107.docx  СиЕП БатмДЕ Р3107.docx  ФЛБ БатмДЕ Р3107.docx  Финансовое мошенничество, Батманов Даниил, P3107.docx
1st stage/дискретная математика/: ~$дзшки.docx  Курсовая работа по дискретной математике, 2 семестр, БатмДЕ Р3107.docx
1st stage/коммуникации и командообразование/: Вредные советы по работе в команде.docx  ТЕСТ БЕЛБИНА.docx
1st stage/математика/: README.md
1st stage/основы профессиональной деятельности/: README.md
1st stage/программирование/: README.md
2nd stage/: README.md
2nd stage/алгосы/: P3207.Батманов Даниил Евгеньевич.1234.doc  P3207.Батманов Даниил Евгеньевич.13141516.doc  P3207.Батманов Даниил Евгеньевич.5678.doc  P3207.Батманов Даниил Евгеньевич.9101112.doc
2nd stage/английский язык/: README.md
2nd stage/бмс/: Батманов Агнистова Реферат FoodNet.docx
2nd stage/иэтп/: README.md
2nd stage/матстат/: ИДЗ1 матстат.docx  ИДЗ2 матстат.docx  ИДЗ3 матстат.docx  ИДЗ4 матстат.docx  ИДЗ6 матстат.docx  ИДЗ8 матстат.docx
2nd stage/опи/: ОПИ лаб1 БАТМАНОВ РАЗИНКИН_V2.docx  ОПИ лаб2 БАТМАНОВ РАЗИНКИН.docx  ОПИ лаб3 БАТМАНОВ РАЗИНКИН.docx
3rd stage/англ/: the last supper.pptx
3rd stage/оси/лаб2/os_lab2/: CMakeLists.txt  dedup  dedup.cpp  lab2_cache.cpp  lab2_cache.h  main  main.cpp
(+679 files in other folders)
